@startuml All Design Patterns - Overview

skinparam classAttributeIconSize 0
skinparam shadowing false

package "Design Patterns Implementation" {
    
    package "Singleton Pattern" {
        class Database {
            -{static} instance: Database
            +{static} getInstance(): Database
            +getConnection(): mysqli
        }
        
        class EventNotifier {
            -{static} instance: EventNotifier
            +{static} getInstance(): EventNotifier
        }
        
        class ControllerFactory {
            -{static} instance: ControllerFactory
            +{static} getInstance(): ControllerFactory
        }
    }
    
    package "Factory Pattern" {
        class ControllerFactory {
            +create(controllerName: string): object
        }
        
        class AuthController
        class UserController
        class InventoryController
        class DoctorRequestController
        
        ControllerFactory ..> AuthController : creates
        ControllerFactory ..> UserController : creates
        ControllerFactory ..> InventoryController : creates
        ControllerFactory ..> DoctorRequestController : creates
    }
    
    package "Observer Pattern" {
        interface Observer {
            +update(event: string, data: array): void
        }
        
        interface Subject {
            +attach(observer: Observer): void
            +notify(event: string, data: array): void
        }
        
        class EventNotifier {
            +attach(observer: Observer): void
            +notify(event: string, data: array): void
        }
        
        class ActivityLogObserver {
            +update(event: string, data: array): void
        }
        
        Subject <|.. EventNotifier
        Observer <|.. ActivityLogObserver
        EventNotifier "1" o-- "*" Observer
    }
    
    package "Strategy Pattern" {
        interface RoleStrategy {
            +canAccess(resource: string): bool
            +getRoleName(): string
        }
        
        class AdminRoleStrategy
        class DoctorRoleStrategy
        class PharmacistRoleStrategy
        class RoleStrategyFactory
        
        RoleStrategy <|.. AdminRoleStrategy
        RoleStrategy <|.. DoctorRoleStrategy
        RoleStrategy <|.. PharmacistRoleStrategy
        RoleStrategyFactory ..> RoleStrategy : creates
    }
}

package "Usage" {
    class RouteFile {
        +execute(): void
    }
    
    class Controller {
        +index(): void
    }
    
    class Config {
        +initialize(): void
    }
}

RouteFile ..> ControllerFactory : uses
Controller ..> EventNotifier : uses
Controller ..> Database : uses
Config ..> Database : uses
Config ..> EventNotifier : uses
Config ..> RoleStrategyFactory : uses

note right of Database
    **Singleton Pattern**
    Ensures single database
    connection instance
end note

note right of ControllerFactory
    **Factory Pattern**
    Creates controllers with
    automatic dependency injection
end note

note right of EventNotifier
    **Observer Pattern**
    Notifies observers of events
    for automatic activity logging
end note

note right of RoleStrategyFactory
    **Strategy Pattern**
    Encapsulates role-based
    access control logic
end note

@enduml

